--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@ $psecondcolor: black;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 a,
@@ -18,6 +19,10 @@ li {
 
 img {
   max-width: 100%;
+}
+
+p {
+  line-height: 1.65;
 }
 
 .main-container {
@@ -94,7 +99,6 @@ table {
 
     h2 {
       padding-bottom: 0.5rem;
-
       border-bottom: 0.2rem solid $maincolor;
     }
     h3 {
@@ -111,10 +115,11 @@ table {
       justify-content: space-between;
       .buy-link {
         display: flex;
-        flex-basis: 40%;
+        flex-basis: 45%;
         justify-content: center;
         .center {
           margin: auto;
+          // font-size: 0.9rem;
         }
       }
     }
@@ -122,9 +127,18 @@ table {
 
   .cart {
     grid-area: cart;
-    flex-basis: 28%;
+    flex-basis: 30%;
     background-color: hsl(25, 50%, 60%);
     color: $pmaincolor;
+    h2 {
+      margin: auto;
+      margin-bottom: 0.5rem;
+      border-bottom: 0.2rem solid $pmaincolor;
+    }
+    table,
+    h3 {
+      margin: 1rem 0;
+    }
     .link {
       margin: auto;
       border: 1px solid $pmaincolor;
@@ -134,6 +148,9 @@ table {
 
 .review {
   grid-area: review;
+  .link {
+    margin-top: 2rem;
+  }
   h1 {
     margin: 2rem;
   }
@@ -142,6 +159,74 @@ table {
     .card {
       flex-basis: 30%;
       border-color: $maincolor;
+    }
+  }
+}
+
+.tentang {
+  width: 80%;
+  margin: 0 auto;
+  color: $maincolor;
+  > * {
+    margin: auto;
+  }
+  .title {
+    margin-bottom: 3rem;
+    font-size: 2.5rem;
+    font-weight: lighter;
+  }
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+  }
+  .desc {
+    padding: 2rem;
+    border: 0.8rem solid $maincolor;
+    border-radius: 20px;
+    grid-area: 1 / 1 / 8 / 7;
+    h2 {
+      margin-bottom: 2.5rem;
+      font-size: 1.8rem;
+      font-weight: lighter;
+    }
+    p {
+      width: 80%;
+      color: $psecondcolor;
+      text-align: justify;
+      margin-bottom: 2rem;
+    }
+  }
+  .img {
+    grid-area: 2 / 6 / 7 / 12;
+  }
+}
+
+.kontak {
+  width: 80%;
+  margin: 0 auto;
+  color: $maincolor;
+  > * {
+    margin: auto;
+  }
+  .title {
+    margin-bottom: 3rem;
+    font-size: 2.5rem;
+    font-weight: lighter;
+  }
+}
+
+.identitas {
+  justify-content: space-between;
+  .img {
+    flex-basis: 48%;
+  }
+  .desc {
+    color: $psecondcolor;
+    flex-basis: 48%;
+    display: flex;
+    flex-direction: column;
+    .icon {
     }
   }
 }
