tambah produk di produk list, login dan logout

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -434,18 +434,42 @@ table {
     }
   }
 }
+// akhir bagian edit.pho
 
-// input[type="file"] {
-//   display: none;
-// }
-// .custom-file-upload {
-//   border: 1px solid #ccc;
-//   // display: inline-block;
-//   padding: 2rem 4rem;
-//   cursor: pointer;
-// }
+// awal login.php
 
-// akhi9r bagian edit.pho
+.login {
+  width: 70%;
+  margin: 0 auto;
+  color: $maincolor;
+  margin-bottom: 3rem;
+  flex-direction: column;
+  > * {
+    margin: auto;
+  }
+  h1 {
+    font-weight: lighter;
+  }
+  .title {
+    margin-bottom: 2rem;
+    font-size: 2.5rem;
+  }
+  .form {
+    flex-direction: column;
+    justify-content: center;
+    width: 70%;
+    .link {
+      margin: 0;
+    }
+    .input {
+      margin-bottom: 2rem;
+      border-radius: 10px;
+      line-height: 1.65;
+      padding: 0.5rem;
+    }
+  }
+}
+// akhir login.php
 
 // awal bagian footer.php
 
