--- a/scss/dashboard.scss
+++ b/scss/dashboard.scss
@@ -31,11 +31,27 @@ img {
 .link {
   color: $pmaincolor;
   background-color: $maincolor;
-  padding: 15px 30px;
+  padding: 1rem 1.5rem;
   border-radius: 10px;
   &:hover {
     background-color: $mainhovercolor;
   }
+}
+
+.link-dash {
+  justify-content: start;
+  align-items: center;
+  .list {
+    color: $pmaincolor;
+    background-color: $maincolor;
+    margin: 0.5rem;
+    padding: 1rem 0;
+    border-radius: 10px;
+  }
+}
+
+p {
+  line-height: 1.65;
 }
 
 .background {
@@ -48,13 +64,35 @@ img {
     height: fit-content;
   }
   .container {
+    h1 {
+      font-weight: lighter;
+    }
     background-color: $bgmaincolor;
-    padding: 2rem;
-    margin: 4% 20%;
-    margin-right: 30%;
-    // background-color: rgba(45, 194, 186, 0.5)
-    a {
-      margin: 1rem;
+    padding: 1.5rem;
+    width: 55%;
+    margin: auto;
+    margin-top: 3rem;
+  }
+}
+
+// awal bagian screen ukuran 768px
+
+@media only screen and (max-width: 768px) {
+  .background {
+    .container {
+      width: 75%;
+      margin-top: 2rem;
+    }
+  }
+}
+
+// awal bagian screen ukuran 360px
+
+@media only screen and (max-width: 360px) {
+  .link-dash {
+    justify-content: center;
+    flex-direction: column;
+    .list {
     }
   }
 }
