--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,15 @@ $mainhovercolor: hsl(25, 60%, 40%);
 $pmaincolor: white;
 $psecondcolor: black;
 
+html,
+body {
+  height: 100%;
+}
+body {
+  display: flex;
+  flex-direction: column;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -541,6 +550,7 @@ table {
   padding: 1.5rem;
   margin-top: 1.5rem;
   background-color: $maincolor;
+
   p {
     margin: auto;
     color: $pmaincolor;
